<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="20dp" android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:padding="40pt" android:layout_centerHorizontal="true"
                  android:id="@+id/UserPassLayout">
        <ImageView android:id="@+id/imgLogo" android:maxWidth="160px" android:maxHeight="160px"
                   android:layout_width="120dp"
                   android:layout_height="140dp"
                   android:layout_marginTop="100dp"
                   android:src="@drawable/logo"
                   android:layout_alignParentTop="true"
                   android:layout_centerHorizontal="true"></ImageView>
        <EditText
                android:id="@+id/txtUsername"
                android:hint="@string/UsernameHint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:textColorHint="@color/colorWhite"
                android:drawableLeft="@drawable/ic_action_user"
                android:inputType="text">
        </EditText>
        <EditText
                android:id="@+id/txtPassword"
                android:hint="@string/passwordHint"
                android:layout_marginTop="10dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_below="@+id/txtUsername"
                android:textColor="@color/colorWhite"
                android:ems="10"
                android:textColorHint="@color/colorWhite"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_action_pass"
                android:inputType="textPassword">
        </EditText>
        <Button
                android:id="@+id/btnUsername"
                android:text="@string/loginButtonText"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="250dp"

                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:onClick="onButtonClick"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"
                  android:layout_centerHorizontal="true"
                  android:layout_marginBottom="10dp"
                  android:padding="20dp" android:layout_below="@id/UserPassLayout"
                  android:orientation="horizontal" android:id="@+id/layoutAddHashtag">

        <TextView android:id="@+id/lblRegister" android:text="Register"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:textColor="@color/colorButton"
                  android:layout_marginRight="10pt"
        />


        <TextView android:id="@+id/lblForget" android:text="Forget Password"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:textColor="@color/colorButton"
        />

    </LinearLayout>
</RelativeLayout>